# C2_app_047

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.hf  Makefile  README.hf.md  README.md  README_boilerplate.md  WORKLOG.md  agent-linux-x86_64.spec  agent.spec  docker-compose.yml  plan.md  pyproject.toml  report_047_UEBA.md  requirements-agent.txt  requirements.txt  review.md  test_demo.py  test_import.py  test_llm.py
.codex/: hooks.json
.commandcode/taste/: taste.md
.githooks/: commit-msg
.github/workflows/: ci.yml
agent/: README.md
agent/ueba_agent/: __init__.py
artifacts/: README.md
backend/: README.md
data/: README.md
data/mock/: README.md  device.csv  email.csv  file.csv  http.csv  logon.csv  psychometric.csv
data/schemas/: cert_event_schema.md  normalized_event_schema.md
docs/: 047_UEBA.xlsx  AGENT_DEPLOYMENT.md  API_CONTRACT.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BRIEF.md  CHANGELOG.vi.md  CONTRIBUTING.vi.md  DATA_CONTRACT.md  LLM.md  LLM.vi.md  ML_MODEL.vi.md  OPERATIONS.vi.md  PLAN.md  PRD.md  REPO_STRUCTURE_STANDARD.md  SECURITY.vi.md  TROUBLESHOOTING.vi.md  UEBA_REQUIREMENTS.md
docs/architecture/: ARCHITECTURE.md  OVERVIEW.md  architecture_diagram.md
docs/contracts/: API_CONTRACT.md
docs/guide/: BACKEND.md  README.md  README.vi.md
docs/management/: FRONTEND_TEST_REPORT.md  JOURNAL.md  JOURNAL.vi.md  MVP_PROGRESS.md  TEST_PLAN.md  TEST_REPORT.md  WORKLOG.md
docs/planning/: PRD.md
docs/refactor/: inventory.md  legacy_src_readme_before_refactor.md  result.md  src_only_fe_be_db_keep_ml.md  ueba_ui_redesign_prompt.md
docs/reports/: repo-review-2026-06-18.md  report_047_UEBA.md
eval/: explanation_evaluator.py  test_cases.json
flow/: 0-Idea.md  1-Research.md  2-Scope.md
frontend/: .dockerignore  README.md
infra/: README.md
ml/: README.md
packaging/: com.vespionage.ueba-agent.plist  ueba-agent.service
presentation/: README.md
reports/: README.md  iforest_training_report.md  preprocessing_report.md
scripts/: _pyrun.sh  auto_commit_push.sh  build_agent_binary.sh  generate_mock_data.py  import_cert_full.py  import_mock_data.py  install_agent.ps1  install_agent.sh  install_agent_macos.sh  install_via_curl.ps1  install_via_curl.sh  log_antigravity.py  log_hook.py  run_preprocessing.sh  seed_mock_data.py  train_model.sh  uninstall_agent.ps1  uninstall_agent.sh
src/: __init__.py  config.py  main.py
tests/: README.md  conftest.py  test_explanation_service.py
(+270 files in other folders)
