[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ueba-agent"
version = "0.1.0"
description = "UEBA Endpoint Agent — collect employee-machine activity and stream to UEBA backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Vespionage Team" }]
keywords = ["ueba", "security", "endpoint", "agent", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

# Minimal runtime deps for the agent — does NOT include FastAPI/pandas/sklearn
# (those are server-side only). The agent itself is just a thin HTTPS client
# with a SQLite buffer and a few OS-level collectors.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Build a standalone binary (no Python install required on target machine)
binary = ["pyinstaller>=6.0"]
# Pull-request / development extras
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
# After `pip install .`, this exposes `agent` on PATH:
#   agent version
#   agent enroll --server-url ... --enrollment-token ... --state-path ...
#   agent run
agent = "agent.cli:main"

[project.urls]
"Source" = "https://github.com/vespionage/ueba-endpoint-monitoring"
"Documentation" = "https://github.com/vespionage/ueba-endpoint-monitoring/blob/main/docs/AGENT_DEPLOYMENT.md"

[tool.setuptools]
# The agent lives in src/agent/ — install just that subpackage so we don't
# pull in the backend (FastAPI) or tests.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*"]
exclude = ["agent.tests*", "agent.tests.*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/agent/tests"]
addopts = "-ra -q"
